# Durga

./: Cargo.toml  README.md
resources/: banner.txt  cli.yaml
src/: cli.yaml  extensions.rs  lib.rs  main.rs  ports.rs
tools/: durga_conf.c  durga_update.c  setup.sh
