[package]
name = "durga"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = {version = "2.33", features = ["yaml"]}
termion = "1.5.6"
futures = "0.3"